--- a/css/style.css
+++ b/css/style.css
@@ -91,3 +91,27 @@ h1{
 .container{
   display: flex;
 }
+
+#loginForm{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 1rem;
+
+}
+
+.btnForm{
+  color: white;
+  background-color:  hsl(282, 50%, 50%);
+  padding: 1rem;
+  border-radius: 50px;
+  width: 10rem;
+
+}
+
+.inputField{
+  width: 20rem;
+  height: 2rem;
+  padding: 0.25rem;
+  margin: 0.25rem;
+}
